# polycal

./: .gitignore  AGENTS.md  DECISIONS.md  PROGRESS.md  README.md  pyproject.toml  task1_prompt.md
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/include/polycal/: cusum.hpp  ekf.hpp  types.hpp
cpp/src/: bindings.cpp  cusum.cpp  ekf.cpp
cpp/tests/: test_ekf.cpp
examples/: monte_carlo_sweep.py  synthetic_demo.py
python/polycal/: __init__.py  cusum.py  ekf.py  lie_utils.py  metrics.py  synthetic.py
python/tests/: __init__.py  test_backend_parity.py  test_cusum.py  test_cusum_operating_characteristic.py  test_ekf_integration.py  test_jacobian_numerical.py  test_lie_utils.py  test_metrics.py  test_synthetic.py  test_synthetic_noise.py
