[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polycal"
version = "0.1.0a1"
description = "Online LiDAR-camera extrinsic calibration with calibrated uncertainty and drift detection"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "matplotlib>=3.5",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
